--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -25,6 +25,7 @@ jobs:
 
     - name: contrib
       run: |
+        export INSTALL_PREFIX=/usr
         chmod +x contrib/install.sh
         sudo ./contrib/install.sh
 
